<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:fillViewport="true"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_xl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/spacing_xxl"
            android:text="@string/login_title"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xxl"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/spacing_xxl"
            android:text="@string/login_subtitle"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_size_md" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:hint="@string/phone_hint"
            app:boxBackgroundColor="@color/surfaceColor"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusTopStart="@dimen/card_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/card_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/card_corner_radius"
            app:boxCornerRadiusBottomEnd="@dimen/card_corner_radius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="15"
                android:textColor="@color/textColorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendOtpButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginTop="@dimen/spacing_lg"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/send_otp"
            android:textAllCaps="false"
            android:textColor="@color/textColorWhite"
            android:textSize="@dimen/text_size_md" />

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_lg"
            android:text="We'll send you an OTP to verify your phone number"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_size_xs" />

    </LinearLayout>

</ScrollView>
